# Focus-Flow

./: .gitignore  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: byok-plan-v2.md  byok-plan.md
docs/delivery/: .gitignore  phase1-io-contract.html  phase1-nlp-core.html  phase1-nlp-core.md  phase1-test-report.html  phase2-3-nlp-edit.html  phase4-real-llm-evidence.md
docs/delivery/scenarios/: gallery.html
docs/harness/: episode-log.md  test-points.md
scripts/: e2e-shots.mjs  gen-nlp-io-report.mjs  gen-test-report.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src/components/: ByokSettingsSection.test.tsx  ByokSettingsSection.tsx  GlobalView.tsx  NlpEditDialog.test.tsx  NlpEditDialog.tsx  SettingsPanel.tsx  TaskItem.test.tsx  TaskItem.tsx  TaskList.tsx  ZoneManager.test.tsx  ZoneManager.tsx
src/lib/: db.ts  file-mirror-core.test.ts  file-mirror-core.ts  file-mirror-engine.test.ts  file-mirror-engine.ts  file-mirror.ts  migration.test.ts  storage-adapter.ts  tree-utils.test.ts  urgency-utils.test.ts  urgency-utils.ts
src/lib/nlp-edit/: apply-core.test.ts  apply-core.ts  nlp-smoke.test.ts  provider.test.ts  provider.ts  runtime.ts  schema.test.ts  schema.ts
src/locales/: en.json  zh.json
src/store/: index.ts
src/store/slices/: settingsSlice.test.ts  taskSlice.test.ts  taskSlice.ts  zoneSlice.test.ts
src/types/: index.ts
